--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,41 +3,35 @@
  * https://developers.cloudflare.com/workers/wrangler/configuration/
  */
 {
-	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "large-video-uploader",
-	"main": "src/index.ts",
-	"compatibility_date": "2025-10-11",
-	"observability": {
-		"enabled": true
-	}
-	/**
-	 * Smart Placement
-	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
-	 */
-	// "placement": { "mode": "smart" }
-	/**
-	 * Bindings
-	 * Bindings allow your Worker to interact with resources on the Cloudflare Developer Platform, including
-	 * databases, object storage, AI inference, real-time communication and more.
-	 * https://developers.cloudflare.com/workers/runtime-apis/bindings/
-	 */
-	/**
-	 * Environment Variables
-	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
-	 */
-	// "vars": { "MY_VARIABLE": "production_value" }
-	/**
-	 * Note: Use secrets to store sensitive data.
-	 * https://developers.cloudflare.com/workers/configuration/secrets/
-	 */
-	/**
-	 * Static Assets
-	 * https://developers.cloudflare.com/workers/static-assets/binding/
-	 */
-	// "assets": { "directory": "./public/", "binding": "ASSETS" }
-	/**
-	 * Service Bindings (communicate between multiple Workers)
-	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
-	 */
-	// "services": [{ "binding": "MY_SERVICE", "service": "my-service" }]
+  // The name of your Worker
+  "name": "large-video-uploader",
+
+  // Entry point (compiled output or TypeScript source)
+  "main": "src/worker.ts",
+
+  // Cloudflare Worker compatibility date
+  "compatibility_date": "2025-10-01",
+
+  // Environment variables available to the Worker
+  "vars": {
+    // Cloudflare account ID (not secret)
+    "ACCOUNT_ID": "your-cloudflare-account-d9bfc18ff0adcec738cf58c0fbf3432a"
+  },
+
+  // Environment-specific overrides
+  "env": {
+    "production": {
+      "vars": {
+        "ACCOUNT_ID": "your-prod-account-id"
+      }
+    }
+  },
+
+  // Secrets (set using Wrangler CLI, not stored here)
+  // Run: wrangler secret put R2_ACCESS_KEY_ID
+  //      wrangler secret put R2_SECRET_ACCESS_KEY
+  "secrets": [
+    "R2_ACCESS_KEY_ID",
+    "R2_SECRET_ACCESS_KEY"
+  ]
 }
